welcome.lessons.welcome.array.array123.Array123.scala.error
array123:19: error: type mismatch;
 found   : Unit
 required: Boolean
if(c==0){return false}
^